src/objects/Stakeholders__c.object
<CustomObject>
    <fields>
        <fullName>Business_Role__c</fullName>
        <label>Business Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Techincal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experience_Level__c</fullName>
        <label>Experience Level</label>
        <picklist>
            <picklistValues>
                <fullName>Novice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expertise_Area__c</fullName>
        <label>Expertise Area</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Funnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports and Dashboards</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <inlineHelpText>Enter the office location for the user</inlineHelpText>
        <label>Office Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Primary contact for line of business. One primary contact should be designated per line of business.</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_com_User_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup the stakeholder&apos;s Salesforce.com record</inlineHelpText>
        <label>Salesforce.com User Record</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stakeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Segment to business</description>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supported_Region__c</fullName>
        <inlineHelpText>Select the region this user supports.</inlineHelpText>
        <label>Supported Region</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zeland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Training_Notes__c</fullName>
        <label>Training Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Stakeholders</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>Segment__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Supported_Region__c</columns>
        <columns>Office_Location__c</columns>
        <columns>Business_Role__c</columns>
        <columns>Experience_Level__c</columns>
        <columns>Expertise_Area__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>